# weather-station

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sync.py  update-server.sh
.github/ISSUE_TEMPLATE/: feature_request.md
docs/: README.md
src/: sync.py
src/rp2/: logger.py  main.py  scd4x.py  send_data.py  test_co2.py
src/rp2_sht41/: hardware.py  main.py
src/server/: __init__.py  db.py  eclipse.mplstyle  graphs.py  gunicorn_config.py  schema.sql  vapour.py  weather.py
src/server/nginx/: 404.html  500.html  weather-station.config
src/server/static/: placeholder_graph_attribution.txt  scripts.js  style.css  style_legacy.css
src/server/templates/: base.html  base_legacy.html
src/server/templates/weather/: about.html  analyse.html  explore.html  index.html  legacy.html  visualise.html
