[tool.poetry]
name = "weather-station"
version = "0.1.0"
description = "Home weather station with Raspberry Pi Pico & Kitronik Air Quality Board"
authors = ["ClareGarrard <19202742+ClareGarrard@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
requests = "^2.32.3"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
mpremote = "^1.23.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
