[tool.poetry]
name = "weather-station"
version = "0.1.0"
description = "Home weather station with Raspberry Pi Pico & Kitronik Air Quality Board"
authors = ["ClareGarrard <19202742+ClareGarrard@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
Flask = "^3.0.3"
requests = "^2.32.3"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
mpremote = "^1.23.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# extend-exclude = []
line-length = 100

[tool.ruff.lint]
select = [
    # Default rules
    "E4",
    "E7",
    "E9",
    "F",
    # Additional rules
    "I",    # Import order
    "D",    # Docstrings
    "D401", # First line should be in imperative mood
    "D213", # Multi-line docstring summary should start at the second line
    "C",    # Complexity
]
ignore = [
    "D100", # Missing docstring in public module
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
    "D212", # Multi-line docstring summary should start at the first line
    "D417", # Missing argument descriptions in the docstring
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"**/*/__init__.py" = ["D"]